--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -149,12 +149,17 @@ main {
 
 // Изображение на фоне
 .faceImage {
+    border-radius: 0 0 72px 72px;
+    padding: 0 20px; // Исправлено: значения разделены пробелом
     top: 0;
-    position: absolute;
     width: 160vh;
+    position: absolute;
+    background-size: cover;
     height: 689px;
+    background-image: url("/src/images/fce.png");
+    background-repeat: no-repeat;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), rgba(0, 0, 0, 0.4), url("path_to_image");
 
-    >img {
-        // Можно добавить стили для изображения
-    }
+
 }
