--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,168 +1,16 @@
 // Переменные
-$bgColor: #f0f0f0;
-$headerBgColor: #fff;
-$buttonDefaultColor: #f37021;
-$buttonHoverColor: #f6f3ec;
-$secondMain-color: #DA7816;
-$textColor: #151515;
-$linkColor: black;
-$linkHoverBgColor: #eaeaea; // Можно изменить на нужный цвет для hover
+// Импорт общих стилей
+@import 'base/variables';
+@import 'base/mixins';
+@import 'base/fonts';
 
-@mixin flexCenter{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+// Импорт компонентов
+@import 'components/header';
 
-@mixin heading1 {
-    font-family: "Red Hat Display";
-    font-weight: 400;
-    font-size: 56px;
-    line-height: 110%;
-    color: $headerBgColor;
-}
-
-
-@mixin defaultButton {
-    border: none;
-    border-radius: 72px;
-    padding: 24px 32px;
-    width: 212px;
-    height: 72px;
-    background: $buttonDefaultColor;
-    color: #fff;
-}
-
-
-@mixin hoverButton {
-    border: none;
-    border-radius: 72px;
-    padding: 24px 32px;
-    width: 212px;
-    height: 72px;
-    background: $buttonHoverColor;
-    color: $textColor;
-}
-
-// Импорт шрифтов
-
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
-
-
-// Основной стиль для body
-body {
-    background: $bgColor;
-    margin: 0;
-    padding: 0;
-    color: $textColor;
-    font-size: 16px;
-    font-family: "Manrope", sans-serif;
-   @include flexCenter();
-    align-items: center;
-}
-
-// Стиль для header
-header {
-    border-radius: 0 0 48px 48px;
-    height: 102px;
-    width: 160vh;
-    background: $headerBgColor;
-    @include flexCenter();
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 5%;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    padding: 0 20px; // Исправлено: значения разделены пробелом
-}
-
-h1 {
-    @include heading1();
-}
-
-// Логотип
-.logo {
-    >img {
-        width: 240px;
-        height: 60px;
-    }
-}
-
-
-
-// Кнопка навигации
-.navigateBlockBtn {
-    padding: 16px;
-    line-height: 150%;
-    border: none;
-    font-size: 18px;
-    background-color: white;
-
-}
-
-#telephone {
-    color: $secondMain-color;
-}
-
-// Контейнер для выпадающего содержимого
-.navigateBlock {
-    font-size: 18px;
-    position: relative;
-    display: inline-block;
-
-
-    // Выпадающее содержимое (скрыто по умолчанию)
-    .navigateBlock-content {
-        margin-top: 2vh;
-        display: none;
-        position: absolute;
-        min-width: 333px;
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        background: #f6f3ec;
-        border: 1px solid #d9d9d9;
-        border-radius: 0 0 24px 24px;
-
-        // Ссылки внутри выпадающего списка
-        a {
-            color: $linkColor;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-
-            &:hover {
-                background: $linkHoverBgColor; // Можно изменить на нужный цвет для hover
-            }
-        }
-    }
-
-    // Показать выпадающее меню при наведении курсора
-    &:hover .navigateBlock-content {
-        display: block;
-    }
-
-    // Изменение цвета фона кнопки при отображении содержимого раскрывающегося списка
-    &:hover .navigateBlockBtn {
-        // Можно добавить стили для кнопки при раскрытом меню
-    }
-}
-
-// Кнопка для получения бесплатной оценки
-.getAFreeEstimate {
-    button {
-        @include defaultButton();
-
-        &:hover {
-            @include hoverButton();
-        }
-    }
-}
 
 // Основной контейнер для контента
 main {
-    @include flexCenter();
+ 
 }
 
 // Изображение на фоне
@@ -178,7 +26,6 @@ main {
     background-repeat: no-repeat;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), rgba(0, 0, 0, 0.4), url("path_to_image");
-    
-    @include flexCenter();
+   
 
 }
