Вот теперь доделал

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -12,6 +12,75 @@
     line-height: 110%;
     color: $headerBgColor;
 }
+@mixin heading2 {
+    font-family: "Red Hat Display";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 120%;
+    color: $headerBgColor;
+}
+@mixin heading3 {
+    font-family: "Red Hat Display";
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 120%;
+    color: $headerBgColor;
+}
+@mixin heading4 {
+    font-family: "Red Hat Display";
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 120%;
+    color: $headerBgColor;
+}
+@mixin heading5 {
+    font-family: "Red Hat Display";
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    color: $headerBgColor;
+}
+
+@mixin bodyTextL{
+ font-family: "Manrope";
+ font-weight: 500;
+ font-size: 20px;
+ line-height: 150%;
+}
+@mixin bodyTextM{
+    @include bodyTextL();
+    font-size: 18px;
+}
+
+@mixin bodyTextS{
+    @include bodyTextL();
+    font-size: 16px;
+}
+
+@mixin bodyTextXS{
+    @include bodyTextL();
+    font-size: 14px;
+}
+
+@mixin  buttonText{
+    font-family: "Manrope";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+}
+@mixin  subHeading{
+    font-family: "Manrope";
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 120%;
+}
+@mixin inputHeading{
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 150%;
+}
+
 
 @mixin defaultButton {
     border: none;
