--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 // Импорт компонентов
 @import 'components/header';
 @import 'components/mainContent.scss';
+@import 'components/slider.scss';
 
 
 // Основной контейнер для контента
