--- a/src/scss/components/mainContent.scss
+++ b/src/scss/components/mainContent.scss
@@ -142,3 +142,96 @@ h3{
 #CabinetDoorReplacement{
     flex-direction: row-reverse;
 }
+
+.Testimonials{
+    position: absolute;
+    top: 410%;
+    width: 160vh;
+}
+
+.headingAndSubText{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+    .bodyTextM{
+        @include bodyTextM();
+        color: #5E5E5E;
+        width: 50%;
+    }
+}
+
+
+
+.comms{
+    display: flex;
+    justify-content: space-around;
+}
+
+.comment{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.commentaryText{
+    @include bodyTextM();
+    font-family: 'Red Hat Display';
+    color: #5e5e5e;
+    width: 331px;
+}
+
+.commentAuthor{
+    @include bodyTextS();
+    font-family: 'Red Hat Display';
+    color: #5e5e5e;
+}
+
+.inputForma{
+    position: absolute;
+    top: 490%;
+}
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Кнопка выпадающего меню при наведении и фокусировке */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  /* Контейнер <div> - необходим для размещения выпадающего содержимого */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Выпадающее содержимое (скрыто по умолчанию) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Ссылки внутри выпадающего списка */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Изменение цвета выпадающих ссылок при наведении курсора */
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  /* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
+  .show {display:block;}
