--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/mainContent.scss';
 @import 'components/slider.scss';
+@import 'components/footer.scss';
 
 
 // Основной контейнер для контента
