--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -119,3 +119,12 @@
     background: $buttonHoverColor;
     color: $textColor;
 }
+
+@mixin inputButton {
+    padding: 0 5px;
+    border: 1px solid #d9d9d9;
+    border-radius: 16px;
+    width: 238px;
+    height: 48px;
+    background: #fff;
+}
