--- a/src/scss/components/mainContent.scss
+++ b/src/scss/components/mainContent.scss
@@ -36,28 +36,30 @@ main {
     margin-top: 50px;
     display: flex;
     gap: 20px;
+
     button {
         border-radius: 72px;
         padding: 24px 32px;
         width: 237px;
         height: 72px;
-        &:hover{
+
+        &:hover {
             @include hoverButton();
             width: 237px;
-        height: 72px;
+            height: 72px;
         }
     }
 }
 
-.viewProcess{
-    button{
-        background-color:  #ffffff00;
+.viewProcess {
+    button {
+        background-color: #ffffff00;
         color: #ffffff;
     }
-    
+
 }
 
-.threeGoodStuff{
+.threeGoodStuff {
     margin-top: 5vh;
     width: 160vh;
     position: absolute;
@@ -65,47 +67,51 @@ main {
     display: flex;
     justify-content: space-evenly;
     gap: 200px;
-    .goodStuff{
+
+    .goodStuff {
         width: 300px;
         display: flex;
         align-items: center;
         gap: 10px;
-        .textRight{
+
+        .textRight {
             @include bodyTextM;
             width: 250px;
         }
     }
 }
 
-.mainOurServices{   
+.mainOurServices {
     border-radius: 72px;
     background-color: #F6F3EC;
     position: absolute;
     top: 100%;
     @include flexCenter();
 }
-h2{
- 
+
+h2 {
+
     @include heading2();
     color: $textColor;
 }
 
-h3{
+h3 {
     @include heading3();
     color: $textColor;
-    margin: 0;      
+    margin: 0;
 }
 
-.headingXS{
+.headingXS {
     @include bodyTextXS();
     color: #5E5E5E;
 }
 
-.subHeading{
+.subHeading {
     @include subHeading();
     color: #5E5E5E;
 }
-.tripleBlock{
+
+.tripleBlock {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -113,14 +119,15 @@ h3{
     padding: 0 20px; // Исправлено: значения разделены пробелом
     width: 160vh;
 }
-.textS{
+
+.textS {
     @include bodyTextS();
     color: #5E5E5E;
     width: 67%;
 }
 
-.cabinet{
-   
+.cabinet {
+
     background-color: #ffffff;
     border-radius: 32px;
     padding: 30px 70px;
@@ -129,32 +136,34 @@ h3{
     justify-content: center;
 }
 
-.textAboutFurniture{
+.textAboutFurniture {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    button{
+
+    button {
         @include learnMoreButton();
-        background-color:#5e5e5e00;
+        background-color: #5e5e5e00;
     }
 }
 
-#CabinetDoorReplacement{
+#CabinetDoorReplacement {
     flex-direction: row-reverse;
 }
 
-.Testimonials{
+.Testimonials {
     position: absolute;
     top: 410%;
     width: 160vh;
 }
 
-.headingAndSubText{
+.headingAndSubText {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
-    .bodyTextM{
+
+    .bodyTextM {
         @include bodyTextM();
         color: #5E5E5E;
         width: 50%;
@@ -163,75 +172,117 @@ h3{
 
 
 
-.comms{
+.comms {
     display: flex;
     justify-content: space-around;
 }
 
-.comment{
+.comment {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.commentaryText{
+.commentaryText {
     @include bodyTextM();
     font-family: 'Red Hat Display';
     color: #5e5e5e;
     width: 331px;
 }
 
-.commentAuthor{
+.commentAuthor {
     @include bodyTextS();
     font-family: 'Red Hat Display';
     color: #5e5e5e;
 }
 
-.inputForma{
+.inputForma {
+    width: 140vh;
     position: absolute;
     top: 490%;
+    background-image: url('/src/images/inputBackground.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 5%;
+    h2{
+        width: 80%;
+    }
+    .bodyTextM {
+        @include bodyTextM();
+        color: #5E5E5E;
+        width: 65%;
+        margin-bottom: 24px;
+    }
 }
 
+.kitchenAndForma{
+    display: flex;
+    align-items: center;
+    gap: 48px;
+}
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
+    @include inputButton();
+    color: $textColor;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
-  
-  /* Кнопка выпадающего меню при наведении и фокусировке */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* Контейнер <div> - необходим для размещения выпадающего содержимого */
-  .dropdown {
+    width: 484px;
+    border: 1px solid  #D9D9D9;
+}
+
+/* Кнопка выпадающего меню при наведении и фокусировке */
+.dropbtn:hover,
+.dropbtn:focus {
+}
+
+/* Контейнер <div> - необходим для размещения выпадающего содержимого */
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  /* Выпадающее содержимое (скрыто по умолчанию) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Ссылки внутри выпадающего списка */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+    select{
+        @include inputButton();
+        width: 484px;
+    }
+}
+
+/* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
+.show {
     display: block;
-  }
-  
-  /* Изменение цвета выпадающих ссылок при наведении курсора */
-  .dropdown-content a:hover {background-color: #ddd}
-  
-  /* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
-  .show {display:block;}
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    input{
+        @include inputButton();
+    }
+    
+
+}
+
+::placeholder {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    color: #5e5e5e;
+}
+
+.addressServicesMessage{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    input{
+        width: 484px;
+    }
+    #message{
+height: 122px;
+    }
+}
+.defaultButton{
+    margin-top: 16px;
+    @include defaultButton();
+    width: 484px;
+}
