Вёрстка почти готова

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -3,5 +3,8 @@
 @import '../base/fonts';
 
 footer{
-    top: auto;
+    position: relative;
+    height: 514px;
+    width: 160vh;
+    background-color: #342F28;
 }
