--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -4,9 +4,8 @@
 
 
 .gallery {
-    position: absolute;
-    top: 280%;
-    width: 140vh;
+   
+    width: initial;
     /* Изменено на 100%, чтобы адаптироваться к родительскому контейнеру */
   
     /* Изменено на 100%, чтобы занять всю высоту контейнера */
