--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -17,9 +17,10 @@ body {
 
 // Стиль для header
 header {
+    
     border-radius: 0 0 48px 48px;
     height: 102px;
-    width: 160vh;
+    width: 100%;
     background: $headerBgColor;
     @include flexCenter();
     flex-direction: row;
@@ -27,7 +28,7 @@ header {
     gap: 5%;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     padding: 0 20px; // Исправлено: значения разделены пробелом
 }
 
