--- a/src/scss/components/mainContent.scss
+++ b/src/scss/components/mainContent.scss
@@ -3,9 +3,14 @@
 @import '../base/fonts';
 
 // Изображение на фоне
+body {
+    overflow-x: hidden;
+
+}
+
 
 main {
-    width: 160vh;
+    width: 100%;
     @include flexCenter();
 }
 
@@ -61,7 +66,7 @@ main {
 
 .threeGoodStuff {
     margin-top: 5vh;
-    width: 160vh;
+    width: 100%;
     top: 700px;
     display: flex;
     justify-content: space-evenly;
@@ -115,7 +120,7 @@ h3 {
     gap: 20px;
     border-radius: 0 0 72px 72px;
     padding: 0 20px; // Исправлено: значения разделены пробелом
-    width: 160vh;
+    width: 100%;
 }
 
 .textS {
@@ -128,7 +133,7 @@ h3 {
 
     background-color: #ffffff;
     border-radius: 32px;
-    padding: 30px 70px;
+    padding: 30px 15%;
     gap: 72px;
     display: flex;
     justify-content: center;
@@ -150,27 +155,28 @@ h3 {
 }
 
 .Testimonials {
- 
-    top: 410%;
-    width: 160vh;
+    margin-top: 10%;
+    width: 100%;
+
 }
 
 .headingAndSubText {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin-bottom: 40px;
 
     .bodyTextM {
         @include bodyTextM();
         color: #5E5E5E;
-        width: 50%;
+        width: 38%;
     }
 }
 
 
 
 .comms {
+    padding: 0 10%;
     display: flex;
     justify-content: space-around;
 }
@@ -194,17 +200,26 @@ h3 {
     color: #5e5e5e;
 }
 
+
+
 .inputForma {
-    width: initial;
-  
-    
+    z-index: 1;
+    border-bottom-right-radius: 100px 100px;
+    border-bottom-left-radius: 100px 100px;
+    margin-top: 10%;
+    width: 100%;
     background-image: url('/src/images/inputBackground.png');
     background-repeat: no-repeat;
-    background-size: contain;
-    padding: 5%;
-    h2{
+    background-size: cover;
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
         width: 80%;
     }
+
     .bodyTextM {
         @include bodyTextM();
         color: #5E5E5E;
@@ -213,11 +228,18 @@ h3 {
     }
 }
 
-.kitchenAndForma{
+.kitchenAndForma {
+    padding-top: 5%;
+    justify-content: center;
     display: flex;
     align-items: center;
     gap: 48px;
+    padding-left: 10%;
+    margin-bottom: 5%;
 }
+
+.kitchen {}
+
 .dropbtn {
     @include inputButton();
     color: $textColor;
@@ -226,19 +248,19 @@ h3 {
     border: none;
     cursor: pointer;
     width: 484px;
-    border: 1px solid  #D9D9D9;
+    border: 1px solid #D9D9D9;
 }
 
 /* Кнопка выпадающего меню при наведении и фокусировке */
 .dropbtn:hover,
-.dropbtn:focus {
-}
+.dropbtn:focus {}
 
 /* Контейнер <div> - необходим для размещения выпадающего содержимого */
 .dropdown {
     position: relative;
     display: inline-block;
-    select{
+
+    select {
         @include inputButton();
         width: 484px;
     }
@@ -253,10 +275,11 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    input{
+
+    input {
         @include inputButton();
     }
-    
+
 
 }
 
@@ -268,18 +291,21 @@ h3 {
     color: #5e5e5e;
 }
 
-.addressServicesMessage{
+.addressServicesMessage {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    input{
+
+    input {
         width: 484px;
     }
-    #message{
-height: 122px;
+
+    #message {
+        height: 122px;
     }
 }
-.defaultButton{
+
+.defaultButton {
     margin-top: 16px;
     @include defaultButton();
     width: 484px;
