--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -4,14 +4,14 @@
 
 
 .gallery {
-   
-    width: initial;
+    margin-top: 10%;
+    width: 160vh;
     /* Изменено на 100%, чтобы адаптироваться к родительскому контейнеру */
   
     /* Изменено на 100%, чтобы занять всю высоту контейнера */
     background-image: url('/src/images/galleryBackground.png');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     /* Обеспечивает полное покрытие фона */
     display: flex;
     flex-direction: column;
@@ -19,11 +19,11 @@
     align-items: center;
     overflow: hidden;
     /* Скрыть всё, что выходит за пределы фона */
-    padding: 5%;
+    padding: 2%;
 }
 
 .slider {
-    width: 100%;
+    width: 70%;
     //max-width: 600px; /* Максимальная ширина слайдера */
     overflow: hidden;
     position: relative;
@@ -37,7 +37,6 @@
 
 .slide {
     min-width: 100%;
-    
     box-sizing: border-box;
     display: flex;
     gap: 24px;
