--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -11,55 +11,93 @@
     font-size: 56px;
     line-height: 110%;
     color: $headerBgColor;
+    @media (max-width: 767px) {
+        font-size: 42px;
+        line-height: 110%;
+    }
 }
 
 @mixin heading2 {
+    @media (max-width: 767px) {
+        font-size: 32px;
+        line-height: 120%;
+    }
     font-family: "Red Hat Display";
     font-weight: 400;
     font-size: 48px;
     line-height: 120%;
     color: $headerBgColor;
+ 
 }
 
 @mixin heading3 {
+    @media (max-width: 767px) {
+        font-size: 28px;
+        line-height: 120%;
+    }
     font-family: "Red Hat Display";
     font-weight: 400;
     font-size: 40px;
     line-height: 120%;
     color: $headerBgColor;
+ 
 }
 
 @mixin heading4 {
+    @media (max-width: 767px) {
+        font-size: 24px;
+        line-height: 120%;
+    }
     font-family: "Red Hat Display";
     font-weight: 400;
     font-size: 32px;
     line-height: 120%;
     color: $headerBgColor;
+   
 }
 
 @mixin heading5 {
+    @media (max-width: 767px) {
+        font-size: 20px;
+        line-height: 150%;
+    }
     font-family: "Red Hat Display";
     font-weight: 400;
     font-size: 24px;
     line-height: 150%;
     color: $headerBgColor;
+
 }
 
 @mixin bodyTextL {
+    @media (max-width: 767px) {
+        font-size: 18px;
+        line-height: 150%;
+    }
     font-family: "Manrope";
     font-weight: 500;
     font-size: 20px;
     line-height: 150%;
+ 
 }
 
 @mixin bodyTextM {
+    @media (max-width: 767px) {
+        font-size: 18px;
+        line-height: 150%;
+    }
     @include bodyTextL();
     font-size: 18px;
+ 
 }
 
 @mixin bodyTextS {
     @include bodyTextL();
     font-size: 16px;
+    @media (max-width: 767px) {
+        font-size: 14px;
+        line-height: 150%;
+    }
 }
 
 @mixin bodyTextXS {
@@ -67,11 +105,15 @@
     font-size: 14px;
 }
 
-@mixin buttonText {
+@mixin buttonText{
     font-family: "Manrope";
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
+    @media (max-width: 767px) {
+        font-size: 14px;
+        line-height: 150%;
+    }
 }
 
 @mixin subHeading {
@@ -128,3 +170,50 @@
     height: 48px;
     background: #fff;
 }
+
+@mixin buttonStyles($width, $height, $background, $color) {
+    border-radius: 72px;
+    padding: 24px 32px;
+    width: $width;
+    height: $height;
+    background-color: $background;
+    color: $color;
+}
+
+@mixin sectionStyles($width, $flexDirection, $gap) {
+    display: flex;
+    flex-direction: $flexDirection;
+    gap: $gap;
+    width: $width;
+}
+
+@mixin centeredText($textAlign, $width) {
+    text-align: $textAlign;
+    width: $width;
+}
+@mixin sliderButton($position) {
+    width: 72px;
+    height: 72px;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    line-height: 72px;
+    user-select: none;
+    transform: translateY(-50%);
+    border: 1px solid #F6F3EC;
+    border-radius: 100%;
+    $position: $position;
+}
+
+@mixin footerTextBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 0 5%;
+    margin-top: 10%;
+    @include buttonText();
+    color: #FFFBF4;
+}
+
+
