--- a/src/scss/components/mainContent.scss
+++ b/src/scss/components/mainContent.scss
@@ -1,13 +1,13 @@
 @import '../base/variables';
 @import '../base/mixins';
 @import '../base/fonts';
-
-// Изображение на фоне
+@import '../base/adaptation';
 body {
     overflow-x: hidden;
-
+    button{
+        cursor: pointer;
+    }
 }
-
 
 main {
     width: 100%;
@@ -17,7 +17,7 @@ main {
 .faceImage {
     margin-top: -50px;
     border-radius: 0 0 72px 72px;
-    padding: 0 20px; // Исправлено: значения разделены пробелом
+    padding: 0 20px;
     width: 100%;
     background-size: cover;
     height: 689px;
@@ -25,16 +25,13 @@ main {
     background-repeat: no-repeat;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), rgba(0, 0, 0, 0.4), url("path_to_image");
-    @include flexCenter()
+    @include flexCenter();
 }
 
 .bringingNewLifeL {
     @include bodyTextL();
     color: #ffffff;
-    width: 60vh;
-    text-align: center;
-
-
+    @include centeredText(center, 60vh);
 }
 
 .twoButtons {
@@ -43,15 +40,11 @@ main {
     gap: 20px;
 
     button {
-        border-radius: 72px;
-        padding: 24px 32px;
-        width: 237px;
-        height: 72px;
+        @include buttonStyles(237px, 72px, $buttonDefaultColor, #fff);
 
         &:hover {
             @include hoverButton();
             width: 237px;
-            height: 72px;
         }
     }
 }
@@ -61,16 +54,12 @@ main {
         background-color: #ffffff00;
         color: #ffffff;
     }
-
 }
 
 .threeGoodStuff {
     margin-top: 5vh;
-    width: 100%;
-    top: 700px;
-    display: flex;
+    @include sectionStyles(100%, row, 200px);
     justify-content: space-evenly;
-    gap: 200px;
 
     .goodStuff {
         width: 300px;
@@ -79,7 +68,7 @@ main {
         gap: 10px;
 
         .textRight {
-            @include bodyTextM;
+            @include bodyTextM();
             width: 250px;
         }
     }
@@ -88,12 +77,10 @@ main {
 .mainOurServices {
     border-radius: 72px;
     background-color: #F6F3EC;
-
     @include flexCenter();
 }
 
 h2 {
-
     @include heading2();
     color: $textColor;
 }
@@ -115,12 +102,9 @@ h3 {
 }
 
 .tripleBlock {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    @include sectionStyles(100%, column, 20px);
     border-radius: 0 0 72px 72px;
-    padding: 0 20px; // Исправлено: значения разделены пробелом
-    width: 100%;
+    padding: 0 20px;
 }
 
 .textS {
@@ -130,7 +114,6 @@ h3 {
 }
 
 .cabinet {
-
     background-color: #ffffff;
     border-radius: 32px;
     padding: 30px 15%;
@@ -157,7 +140,6 @@ h3 {
 .Testimonials {
     margin-top: 10%;
     width: 100%;
-
 }
 
 .headingAndSubText {
@@ -169,14 +151,11 @@ h3 {
     .bodyTextM {
         @include bodyTextM();
         color: #5E5E5E;
-        width: 38%;
+        width:60%;
     }
 }
 
-
-
 .comms {
-    padding: 0 10%;
     display: flex;
     justify-content: space-around;
 }
@@ -200,9 +179,8 @@ h3 {
     color: #5e5e5e;
 }
 
-
-
 .inputForma {
+    position: relative;
     z-index: 1;
     border-bottom-right-radius: 100px 100px;
     border-bottom-left-radius: 100px 100px;
@@ -211,7 +189,6 @@ h3 {
     background-image: url('/src/images/inputBackground.png');
     background-repeat: no-repeat;
     background-size: cover;
-   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -238,35 +215,7 @@ h3 {
     margin-bottom: 5%;
 }
 
-.kitchen {}
 
-.dropbtn {
-    @include inputButton();
-    color: $textColor;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    width: 484px;
-    border: 1px solid #D9D9D9;
-}
-
-/* Кнопка выпадающего меню при наведении и фокусировке */
-.dropbtn:hover,
-.dropbtn:focus {}
-
-/* Контейнер <div> - необходим для размещения выпадающего содержимого */
-.dropdown {
-    position: relative;
-    display: inline-block;
-
-    select {
-        @include inputButton();
-        width: 484px;
-    }
-}
-
-/* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
 .show {
     display: block;
 }
@@ -279,8 +228,6 @@ h3 {
     input {
         @include inputButton();
     }
-
-
 }
 
 ::placeholder {
@@ -296,6 +243,26 @@ h3 {
     flex-direction: column;
     gap: 10px;
 
+    .dropbtn {
+        @include inputButton();
+        color: $textColor;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 484px;
+        border: 1px solid #D9D9D9;
+    }
+    
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    
+        select {
+            @include inputButton();
+            width: 484px;
+        }
+    }
     input {
         width: 484px;
     }
