--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,241 @@
 @import 'components/mainContent.scss';
 @import 'components/slider.scss';
 @import 'components/footer.scss';
+* {
+    box-sizing: border-box;
+}
+
+
+@media (max-width: 767px) {
+    header {
+        border-radius: 0 0 18px 18px;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 5%;
+        height: 60px;
+
+        .getAFreeEstimate {
+            gap: 0;
+            button {
+                width: 41px;
+                height: 41px;
+            }
+        }
+
+        #gfe {
+            background-image: url("/src/images/openMenu.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-color: rgba(0, 0, 0, 0);
+            color: rgba(0, 0, 0, 0);
+        }
+
+        #extraButton {
+            background-image: url("/src/images/bp.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+
+            background-color: rgba(0, 0, 0, 0);
+        }
+    }
+
+    .logo {
+
+        img {
+            width: 156px;
+            height: 26px;
+        }
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        margin-left: -5%;
+        top: 100%;
+        width: 100%;
+        flex-direction: column;
+        background-color: #ffffff;
+    }
+
+
+
+    .getAFreeEstimate {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    .faceImage{
+        h1{
+            text-align: center;
+        }
+    }
+    .bringingNewLifeL {
+        width: 100%;
+    }
+
+    .twoButtons {
+        flex-direction: column;
+
+        button {
+            width: 100%;
+        }
+    }
+
+    .threeGoodStuff {
+        margin-top: 1vh;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .tripleBlock .cabinet {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #CabinetDoorReplacement {
+        flex-direction: column;
+    }
+
+    .imageFurniture img {
+        width: 300px;
+        max-width: 100%;
+        height: auto;
+    }
+
+    .textAboutFurniture {
+        align-items: center;
+
+        .textS {
+            width: 100%;
+        }
+    }
+
+    .gallery {
+        width: 100%;
+        justify-content: start;
+        border-radius: 50px;
+    }
+
+    .titileTextButton {
+        flex-direction: column;
+        justify-content: center;
+        margin: 5%;
+
+        h2 {
+            margin-top: 0;
+            margin-left: 10px;
+        }
+    }
+
+    .galleryMore {
+        margin-left: 5%;
+    }
+
+    .slider {
+        width: 100%;
+    }
+
+    .slide {
+        flex-direction: column;
+    }
+
+    .controls {
+        justify-content: start;
+    }
+
+    .headingAndSubText {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+
+        .bodyTextM {
+            align-self: center;
+            width: 343px;
+        }
+    }
+
+    .sliderComms,
+    .slider-comms-list {
+        width: 100%;
+        height: 100%;
+    }
+
+    .comms {
+        margin-left: 5%;
+        gap: 50px;
+        //width: 27%;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .comment {
+        width: 100%;
+    }
+
+    .commentaryText {
+        width: 343px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h2 {
+            width: 50%;
+        }
+
+        .defaultButton {
+            width: 343px;
+            margin-left: -50px
+        }
+    }
+
+    .names,
+    .emailAndPhone,
+    .addressServicesMessage {
+        padding: 2%;
+
+        input {
+            margin-left: 7%;
+            width: 343px;
+        }
+    }
+
+    .addressServicesMessage {
+        .dropdown {
+            select {
+                width: 343px;
+                margin-left: 8%;
+            }
+        }
+    }
+
+
+
+    .kitchen {
+        display: none;
+    }
+
+    .inputs{
+        margin-left: -60px;
+    }
+
+    footer {
+        margin-top: 0;
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .createBy {
+        margin-left: 0;
+    }
+}
 
 
 // Основной контейнер для контента
