--- a/src/scss/components/mainContent.scss
+++ b/src/scss/components/mainContent.scss
@@ -23,7 +23,7 @@ main {
     width: 100%;
     background-size: cover;
     height: 689px;
-    background-image: url("/src/images/fce.png");
+    background-image: url("/main/src/images/fce.png");
     background-repeat: no-repeat;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), rgba(0, 0, 0, 0.4), url("path_to_image");
