--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@ body {
 @media (max-width: 765px) {
     body {
         width: 375px;
+        overflow-x: hidden;
     }
 
     .header {
@@ -140,7 +141,9 @@ body {
         padding: 16px;
         gap: 24px;
     }
-
+.services__list{
+    padding: 0;
+}
     .service__image {
 
         img {
